<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <DatePicker
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false" />

        <TextView
            android:id="@+id/longevityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longevity_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/longevity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/longevity_hint"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewDeathday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deathday_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <DatePicker
            android:id="@+id/deathday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timescale_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/timescale"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/reverse_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reverse_time_label" />

        <CheckBox
            android:id="@+id/show_msec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_msec_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/show_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_notifications_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_sound_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup android:id="@+id/notification_sound_radio_group" >

            <RadioButton
                android:id="@+id/no_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_sound_label" >
            </RadioButton>

            <RadioButton
                android:id="@+id/default_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_sound_label" >
            </RadioButton>

            <RadioButton
                android:id="@+id/mm_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mm_sound_label" >
            </RadioButton>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_frequency_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/update_frequency"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_label" />

            <Button
                android:id="@+id/help_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_label" />

            <Button
                android:id="@+id/ok_button"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok_label" />
        </LinearLayout>
    </TableLayout>

</ScrollView>